fix only show scrollbar in filter by customer when needed

--- a/src/app/scan-order/filer-by-customer-popup/filter-by-customer-popup.component.css
+++ b/src/app/scan-order/filer-by-customer-popup/filter-by-customer-popup.component.css
@@ -63,13 +63,13 @@ h4{
 
 .customer-list{
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 100%;
 }
 
 .product-list{
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 100%;
 }
 
